--- a/index.html
+++ b/index.html
@@ -1,4 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta charset="UTR-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Taegang Kim Portfolio</title>
+    
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <header class="header">
+        <a href="#" class="logo">TAEGANG.</a>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+           <!--- <a href="#skill">Skill</a>
+            <a href="#Certificate">Certificate</a>
+            <a href="#Experience">Experience</a> -->
+            <a href="#project">Project</a>
+            <a href="#contact">Contact</a>
+        </nav>
+        <div class="fa-solid fa-moon" id="darkMode-icon"></div>
+        <div class="fa-solid fa-bars" id="menu-bars"></div>
+    </header>
+
+    <!-- Home section -->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, I am</h3>
+            <h1><span>Taegang</span> Kim</h1>
+            <p>
+                I am a Computer Science student at UT Austin passionate about building intelligent, human-centered systems.
+                I’m currently pursuing my B.S. in Computer Science, focusing on AI applications, full-stack development, and research-driven software. I love turning ideas into scalable tools that solve real-world problems.
+            </p>
+            <div class="social-media">
+                <!-- social media 링크 연결하기 -->
+                <a href="https://www.instagram.com/eliishakimm/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/taegang-kim-b930b1298/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="mailto:minjoy0321@gmail.com"><i class="fa-brands fa-google"></i></a>
+                <a href="https://github.com/123jklas"><i class="fa-brands fa-github"></i></a>
+            </div>
+
+            <a href="#" class="btn">Download CV</a>
+        </div>
+    </section>
+
+    <!-- About section -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="Picture.png" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <p>
+                I’m a software engineer in training with strong interests in artificial intelligence, computer vision, and natural language processing. I specialize in building applications that combine deep learning models with real-world usability — from AI-powered interview assistants to emotional wellness tools.
+
+I have hands-on experience working with modern AI frameworks such as OpenAI, LangChain, Whisper, and Hugging Face. On the frontend, I build fast and interactive interfaces using React, Streamlit, and SwiftUI. I’m also comfortable with full-stack development and integrating APIs into intelligent workflows.
+
+Whether it’s designing user-friendly interfaces or fine-tuning models with real datasets, I aim to create technology that is both smart and meaningful.
+            </p>
+            <a href="#" class="btn">Read More</a> 
+        </div>
+    </section>
+
+    <!-- Skill section -->
+    <!-- Experience section -->
+    <!-- Certificate -->
+    <!-- Project section -->
+    <section class="project" id="project">
+        <h2 class="heading">Latest <span>Projects</span></h2>
+
+        <div class="project-container">
+            <div class="project-box">
+                <img src="ready2interview.png" alt="">
+                <div class="project-layer">
+                    <h4>Ready2Interview</h4>
+                    <p>An AI-powered interview preparation assistant that analyzes your resume.</p>
+                    <a href="https://github.com/123jklas/Interview-Generator/tree/main"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="DIY design.png" alt="">
+                <div class="project-layer">
+                    <h4>DIY-design</h4>
+                    <p>Generates realistic room images based on user descriptions and provides shopping links for each component.</p>
+                    <a href="https://github.com/123jklas/DIY-Designer?tab=readme-ov-file"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="unveil.png" alt="">
+                <div class="project-layer">
+                    <h4>Unveil</h4>
+                    <p>iOS app that unlocks the hidden stories behind buildings, murals, sculptures, street art, and landmarks.</p>
+                    <a href="https://github.com/123jklas/unveil"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="MoodAnalyzer.png" alt="">
+                <div class="project-layer">
+                    <h4>MoodAnalyzer</h4>
+                    <p>AI-powered iOS app that helps users gain insights into their emotional well-being through adaptive questionnaires and expressive drawing analysis.</p>
+                    <a href="https://github.com/123jklas/MoodAnalyzer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="SpyFall.png" alt="">
+                <div class="project-layer">
+                    <h4>NLP-Spyfall-Agent</h4>
+                    <p>Built agents, used to compete in a game of spyfall. Used LLMs and embedding models to ask/answer questions and determine the spy/location.</p>
+                    <a href="https://github.com/123jklas/NLP-Spyfall-Agent"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="UTHornDeal.png" alt="">
+                <div class="project-layer">
+                    <h4>Horn Deal</h4>
+                    <p>HornDeals is a local community marketplace built for UT Austin students, inspired by Korea’s “Danggeun Market” (Karrot)</p>
+                    <a href="https://github.com/123jklas/Carrot2024-React-Client"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact section -->
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+    <!-- footer design -->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
+        </div>
+    </footer>
+
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <!-- custom js -->
+    <script src="script.js"></script>
+</body>
+</html>
