--- a/index.html
+++ b/index.html
@@ -39,13 +39,41 @@
             </p>
             <div class="social-media">
                 <!-- social media 링크 연결하기 -->
-                <a href="https://www.instagram.com/eliishakimm/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/taegang-kim-b930b1298/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="mailto:minjoy0321@gmail.com"><i class="fa-brands fa-google"></i></a>
                 <a href="https://github.com/123jklas"><i class="fa-brands fa-github"></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="Taegang Kim Resume for job.pdf" class="btn">Download CV</a>
+        </div>
+
+        <div class="profession-container">
+            <div class="profession-box">
+                <div class="profession" style="--i:0;">
+                    <i class='bx bx-code-alt'></i>
+                    <h3>Web Developer</h3>
+                </div>
+                <div class="profession" style="--i:1;">
+                    <i class='bx bx-code'></i>
+                    <h3>Software Developer / Engineer</h3>
+                </div>
+                <div class="profession" style="--i:2;">
+                    <i class='bx bx-palette'></i>
+                    <h3>ML/AI Engineer</h3>
+                </div>
+                <div class="profession" style="--i:3;">
+                    <i class='bx bx-video-recording'></i>
+                    <h3>Researcher</h3>
+                </div>
+
+                <div class="circle"></div>
+            </div>
+
+            <div class="overlay"></div>
+        </div>
+
+        <div class="home-img">
+            <img src="portfolio.png" alt="">
         </div>
     </section>
 
@@ -60,17 +88,14 @@
             <p>
                 I’m a software engineer in training with strong interests in artificial intelligence, computer vision, and natural language processing. I specialize in building applications that combine deep learning models with real-world usability — from AI-powered interview assistants to emotional wellness tools.
 
-I have hands-on experience working with modern AI frameworks such as OpenAI, LangChain, Whisper, and Hugging Face. On the frontend, I build fast and interactive interfaces using React, Streamlit, and SwiftUI. I’m also comfortable with full-stack development and integrating APIs into intelligent workflows.
+                I have hands-on experience working with modern AI frameworks such as OpenAI, LangChain, Whisper, and Hugging Face. On the frontend, I build fast and interactive interfaces using React, Streamlit, and SwiftUI. I’m also comfortable with full-stack development and integrating APIs into intelligent workflows.
 
-Whether it’s designing user-friendly interfaces or fine-tuning models with real datasets, I aim to create technology that is both smart and meaningful.
+                Whether it’s designing user-friendly interfaces or fine-tuning models with real datasets, I aim to create technology that is both smart and meaningful.
             </p>
             <a href="#" class="btn">Read More</a> 
         </div>
     </section>
 
-    <!-- Skill section -->
-    <!-- Experience section -->
-    <!-- Certificate -->
     <!-- Project section -->
     <section class="project" id="project">
         <h2 class="heading">Latest <span>Projects</span></h2>
