--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 </div>
                 <div class="profession" style="--i:1;">
                     <i class='bx bx-code'></i>
-                    <h3>Software Developer / Engineer</h3>
+                    <h3>Software Engineer</h3>
                 </div>
                 <div class="profession" style="--i:2;">
                     <i class='bx bx-palette'></i>
-                    <h3>ML/AI Engineer</h3>
+                    <h3>Full Stack Developer</h3>
                 </div>
                 <div class="profession" style="--i:3;">
                     <i class='bx bx-video-recording'></i>
-                    <h3>Researcher</h3>
+                    <h3>AI/ML Researcher</h3>
                 </div>
 
                 <div class="circle"></div>
