--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://github.com/123jklas"><i class="fa-brands fa-github"></i></a>
             </div>
 
-            <a href="Taegang Kim Resume.pdf" class="btn">Download CV</a>
+            <a href="Taegang_Kim_Resume.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
